YTDB-629: multiHopStaticRidInWhere_nonExistentRid_returnsEmpty test fixed